crates/tui/tests/snapshots/render_snapshots__model_picker_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 1163
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
┌ Switch model ──────────────────────────────────────────────────┐ │ [Act] Sto Too Fil Obj Str Art
│  current: gemma-4-12B-it-qat-UD-Q4_K_XL.gguf                   │ │
│> recommended — type to search all 2 models…    (1 shown)       │ │  (no activity yet)
│                                                                │ │
│ local                                                          │ │
│ ● Gemma 4 12B (local)  gemma-4-12B-it-qat-UD-Q4_K_… free  ◀    │ │
│                                                                │ │
│  filter · j/k move · ↵ switch · Esc close                      │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
