crates/tui/tests/snapshots/render_snapshots__multiline_message_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Sto Too Fil Obj Str Art
                                                                   │
❯ You                                                              │  1. • prompt "show multiline"
▌ show multiline                                                   │
                                                                   │
◆ PRISM                                                            │
  Line 1: hello                                                    │
  Line 2: world                                                    │
  Line 3: deterministic                                            │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready     model: fake-backend   [INPUT]    Ctrl-C quit           │
