crates/tui/tests/snapshots/render_snapshots__narrow_chat_80x24.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend
· PRISM ready

❯ You
▌ Which preburner liner alloys survive hydrogen-rich gas?

◆ PRISM
  Fake backend response: PRISM TUI is running in deterministic test mode.









★ 2 marked for agent · goal: preburner liner alloy shortlist
┌ Prompt ──────────────────────────────────────────────────────────────────────┐
│ Type a message... (Enter=send, /help, Ctrl-C=quit)                           │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
  Ready     model: fake-backend  tok/s:      —   [INPUT]    Ctrl-C quit
