crates/tui/tests/snapshots/render_snapshots__notebook_exec_approval_code_popup_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ [Act] Too Fil Obj Str Art
                                                                   │
❯ You                                                              │  1. prompt "analyze the data" •
▌ analyze the data                                                 │
              ┌──────────────────────────────────────────────────────────────────────┐
· notebook_exe│  ⚠ APPROVAL REQUIRED                                                 │
              │                                                                      │
              │  Tool: notebook_exec  —  Allow notebook_exec?                        │
              │┌ Cell code — review before answering ───────────────────────────────┐│
              ││import os                                                           ││
              ││secrets = {k: v for k, v in os.environ.items()}                     ││
              ││print(secrets)                                                      ││
              ││                                                                    ││
              ││                                                                    ││
              ││                                                                    ││
              ││                                                                    ││
              ││                                                                    ││
              ││                                                                    ││
              ││                                                                    ││
              ││                                                                    ││
              ││                                                                    ││
              ││                                                                    ││
              │└────────────────────────────────────────────────────────────────────┘│
┌ Prompt ─────│  [y] Allow   [a] Allow all   [n] Deny                                │
│tool approval└──────────────────────────────────────────────────────────────────────┘
│                                                                 ││
│                                                                 ││
└─────────────────────────────────────────────────────────────────┘│
  Ready  model: fake-backend   [APPROVAL]    Ctrl-C quit           │
