crates/tui/tests/snapshots/render_snapshots__research_form_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ [Act] Too Fil Obj Str Art
                                                                   │
                                                                   │  (no activity yet)
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                  ┌ Deep research — background run ──────────────────────────────┐
                  │                                                              │
                  │  ▸ Question          high-entropy alloys for hot structures  │
                  │    Depth             ‹ 1 ›  (0–5)  0 = local-only · 1+ = web │
                  │    Web               [x] on  off forces depth 0              │
                  │    Knowledge Graph   [x] on  (advisory)                      │
                  │    Provenance/memory [ ] off  (advisory)                     │
                  │    Mesh/partner data [ ] off  (advisory)                     │
                  │                                                              │
                  │  ↑↓ move · Space/←→ adjust · ↵ launch · Esc                  │
                  └──────────────────────────────────────────────────────────────┘
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
